# crazytext

./: LICENSE  MANIFEST.in  README.md  setup.cfg
crazytext/: __init__.py  utils.py
crazytext/data/: abbreviations_wordlist.json
