[metadata]
name = crazytext
version = 1.0.0
author = Abhay Parashar
author_email = parasharabhay13@gmail.com
description = An Easy To Use Text Cleaning Package For NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abhayparashar31
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True